# last-whisper-tts

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  run_api.py
app/: main.py
app/api/: dependencies.py
app/api/routes/: health.py  tts.py
app/core/: config.py  exceptions.py  logging.py  uvicorn_logging.py
app/models/: __init__.py  database_manager.py  enums.py  models.py  schemas.py
app/services/: task_service.py
app/tts_engine/: tts_engine_azure.py  tts_engine_gcp.py  tts_engine_local.py  tts_engine_manager.py  tts_engine_wrapper.py
